# makerplot-studio

./: .gitignore  LICENSE  README.md  pyproject.toml  run.ps1
samples/: README.md
scripts/: bundle-apps.ps1  setup.ps1
settings/: image_settings.txt  text_settings.txt
src/makerplot_studio/: __init__.py  __main__.py  app.py  backlash.py  com_ports.py  config.py  fengrave.py  gcode_clean.py  paths.py  pipeline.py  ugs_cli.py
